c12: Customer.java